      controller types (only works with LinuxSampler & gigedit, will not
      work with Gigasampler/GigaStudio)
    - added new method File::GetGroup(String name) for getting group by name
    - added new method Region::GetDimensionDefinition(dimension_t type)
    - bugfix: don't alter region pointer in DimensionRegion::CopyAssign()
    - added some more sanity checks in Region::AddDimension()

  * src/DLS.cpp, src/DLS.h:
    - added new method File::GetFileName()
    - fixed minor "memory leak on exception" bug found with cppcheck
    - added new method File::GetExtensionFile(int index)
    - added new method File::SetFileName() allowing to call File::Save()
      later on without passing a file name
    - added inline helper methods overlaps() for struct range_t

  * src/RIFF.cpp, src/RIFF.h:
    - bugfix: avoid calling read() with count 0 when writing a file,
      as this may hang on some systems
    - fixed memory leak and memory handling errors when file loading
      fails
    - added new method Chunk::ReadString
    - added new method File::SetFileName() allowing to call File::Save()
      later on without passing a file name
    - added new method File::IsNew()
    - added support for loading RIFF-like files with a bit different layout
      than "real" RIFF files (used for KORG format support)
    - added new method Chunk::GetFile()
    - added new method Chunk::GetLayout()

  * src/gigextract.cpp:
    - export sample loop, unity note and fine tune with libsndfile

  * src/riftree.cpp:
    - added more command line options for being able to also dump other kind
      of file formats similar but not equal to the RIFF format

Version 3.3.0 (30 Jul 2009)

  * general changes:
    - fixed compilation with gcc 4.3
    - fixes for building with Visual C++
    - minor fix in configure for building DLL on Windows

  * src/gig.cpp, src/gig.h:
    - added partial support for MIDI rules, only the Controller
      Triggered rule is supported so far